# swavan-api-service

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: handlers.rs  main.rs  schema.rs
src/config/: mod.rs
src/handlers/: common.rs  delete.rs  get.rs  mod.rs  post.rs  put.rs
src/schemas/: common.rs  delete.rs  get.rs  mod.rs  post.rs
