[package]
name = "swavan-api-service"
version = "0.1.0"
authors = ["vpathasala <vpathsala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = { version = "3.1.0", features = ["openssl"] }
futures = "0.3.1"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
openssl = "0.10.28"
serde_bytes = "0.11"

[dev-dependencies]
actix-rt = "1"