[package]
name = "swavan-api-service"
version = "0.1.0"
authors = ["vpathasala <vpathsala@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-http = "2.0.0"
actix-web = { version = "3.1.0", features = ["openssl"] }
futures = "0.3.6"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
openssl-sys = "0.9"
openssl = { version = "0.10.30" }
serde_bytes = "0.11"
log = "0.4.11"

[dev-dependencies]
actix-rt = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3